# Listaprogetto

./: CMakeLists.txt  README.md  listaspesa.cpp  listaspesa.h  main.cpp  oggetto.cpp  oggetto.h  utente.cpp  utente.h
include/: listaspesa.h  observer.h  oggetto.h  utente.h
src/: listaspesa.cpp  main.cpp  oggetto.cpp  utente.cpp
tests/: test_lista_spesa.cpp  test_oggetto.cpp  test_utente.cpp
